objects/Charity_Donation__c.object
<CustomObject>
    <description>Contains Donation infomation</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Contains the amount donated by the Donar</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donar_Name__c</fullName>
        <description>Contains the Donar name</description>
        <label>Donar Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_ID__c</fullName>
        <description>Contains Donation ID</description>
        <label>Donation ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Charity Donation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charity Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charity Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>